# nfcore_stats_backend

./: .gitignore  Readme.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: python_autoformatter.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/api/: celery.py  db.py  functions.py  main.py  models.py  settings.py  tasks.py
backend/api/database_logic/: db.py  pipelines_crud.py  releases_crud.py  remote_workflows_crud.py  topics_crud.py
backend/api/models/: github_user.py  issues.py  pipelines.py  pullrequests.py  uptime.py
backend/api/routers/: import_json.py  issues.py  uptime.py
backend/run/: start_api.sh  start_scheduler.sh
backend/scheduler/: celery.py  start_scheduler.sh
config/: create_tables.sql  redis.conf
doc/architecture/: database.md
dockerfiles/: DockerfilePython  DockerfileRedis
