[tool.poetry]
name = "nf-core_stats"
version = "0.1.0"
description = "A new base to collect statistics for the nf-core community."
authors = ["The nf-core community"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^5.0.5"}
databases = {version = "^0.4.1", extras = ["postgresql"]}
fastapi = "^0.65.2"
psycopg2 = "^2.8.6"
pydantic = "^1.7.3"
requests = "^2.25.1"
uvicorn = "^0.13.0"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3"
isort = "^5.6.4"
mypy = "^0.790"
pylint = "^2.6.0"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']

[tool.isort]
atomic = true
case_sensitive = true
combine_star = true
force_sort_within_sections = true
include_trailing_comma = true
order_by_type = true
line_length = 88  # Same as Black's line length
multi_line_output = 3
